added comments to 3 html files

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     </div>
   <!-- modified by Kazuto -->
-  <!-- dropdown menu on small screens -->
+  <!-- dropdown menu toggled by burger on small screens -->
     <div class='left'>
       <div id="SmallNavBar" class="bar-block light-grey hide hide-large hide-medium large">
         <a href="people.html" class="show button padding-large">People</a>
