--- a/people.html
+++ b/people.html
@@ -27,7 +27,7 @@
 
     </div>
   <!-- modified by Kazuto-->
-  <!-- dropdown menu on small screens -->
+  <!-- dropdown menu toggled by burger on small screens -->
     <div class='left'>
       <div id="SmallNavBar" class="bar-block light-grey hide hide-large hide-medium large">
         <a href="people.html" class="show burger-item padding-large">People</a>
@@ -63,7 +63,7 @@
           spend all of her time sitting behind a computer. Just like Carbon, Kate shines under pressure. 
           When Kate grows up she hopes to become a GIS Applications Specialist.</p>
         <!-- owner: Kazuto-->
-        <!-- if the "Contact Information" button is clicked, the email address of the person is displayed below. Same code used in next two bio blocks -->
+        <!-- if the "Contact Information" button is clicked, the email address of the person is displayed below it. Same code used in next two bio blocks -->
         <div class='dropBox'>
           <button id='kateButton' onclick='dropdownKate()' class='dropContact'>Contact Information</button>
           <div id='kateEmail' class='emailBox'>kalittl@flemingcollege.ca</div>
