--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
     </div>
 
   <!-- modified by Kazuto-->
-  <!-- dropdown menu on small screens -->
+  <!-- dropdown menu toggled by burger button on small screens -->
     <div class='left'>
       <div id="SmallNavBar" class="bar-block light-grey hide hide-large hide-medium large">
         <a href="people.html" class="show burger-item padding-large">People</a>
@@ -50,11 +50,11 @@
   </header>
 
 
-    <!-- Kate - December 1, 2020 -->
-    <!-- inspiration from http://tresreistech.com/gis-consulting-and-services/-->
-    <!-- menu for large screen-->
-    <!--modified by Mark Dec 4, 2020-->
-  <!-- owner: Kazuto-->
+  <!-- owner: Kazuto -->
+  <!-- Kate - December 1, 2020 -->
+  <!--modified by Mark Dec 4, 2020-->
+  <!-- inspiration from http://tresreistech.com/gis-consulting-and-services/ -->
+  <!-- following code displays 6 icons that are anchor links to the corresponding project description. Displayed 3 across x 2 down for large screens -->
   <div class='content center hide-small'>
     <h2>Services</h2>
     <div class='flex'>
@@ -94,12 +94,11 @@
     </div>
   </div>
   <!-- end Kazuto ownership-->
-
 <!-- end menu large screen-->
 
 <!--Owner Mark December 5-->
-
 <!-- menu on small screen-->
+<!-- Displayed 2 across x 3 down for small screens -->
 <div class='content center hide-large hide-medium'>
   <div class='flex hide-large hide-medium'>
     <div class='halfWidth'>Spatial Analysis</div>
@@ -146,6 +145,8 @@
 <!--end menu small screen-->
 <!--end Mark-->
 
+<!-- beginning of project descriptions; 6 in total, each with a title and accompanying paragraph-->
+
 <!-- Owner: Kate -->
   <!-- GEOM 103-->
   <div class="light-grey container" id='spatial'>
@@ -167,9 +168,9 @@
       </div>
     </div>
   </div>
-<!-- end of Owner: Kate -->
+  <!-- end of Owner: Kate -->
 
-<!--Owner Mark-->
+  <!--Owner Mark-->
   <!-- GEOM 102-->
   <div class="container" id='geovis'>
     <div class="content">
@@ -239,7 +240,7 @@
       </div>
     </div>
   </div>
-<!-- End Owner Mark-->
+  <!-- End Owner Mark-->
 
   <!-- GEOM 101-->
   <div class="container" id='webdesign'>
