--- a/projects.html
+++ b/projects.html
@@ -215,7 +215,7 @@
             <li>Multispectral Image Classification (Supervised and Unsupervised)</li>
             <li>Image Enhancement</li>
           </ul>
-        <img src="images/RemoteSensing.jpg" alt="Geometric Correction" width="400" height="321" class="responsive project-image padding-large">
+        <img src="images/RemoteSensing.jpg" alt="Geometric Correction" width="400" height="321" class="responsive project-image">
       </div>
     </div>
   </div>
