--- a/projects.html
+++ b/projects.html
@@ -216,8 +216,13 @@
             <li>Multispectral Image Classification (Supervised and Unsupervised)</li>
             <li>Image Enhancement</li>
           </ul>
-        <img src="images/RemoteSensing.jpg" alt="Geometric Correction" width="400" height="321" class="responsive project-image">
       </div>
+    </div>
+  </div>
+
+  <div>
+    <div class="padding-large">
+      <img src="images/RemoteSensing.jpg" alt="Geometric Correction" width="400" height="321" class="responsive project-image">
     </div>
   </div>
 
