add survey photo

--- a/projects.html
+++ b/projects.html
@@ -241,6 +241,9 @@
           team is happy to truck the total stations and rods out to the field conduct to cadastral surveys as well.
         We get out of the office!</p>
       </div>
+      <div class="padding-large">
+        <img src="images/surveyplan_400_252.jpg" alt="Geometric Correction" width="400" height="252" class="responsive project-image">
+      </div>
     </div>
   </div>
   <!-- End Owner Mark-->
