add geovis image

--- a/projects.html
+++ b/projects.html
@@ -182,6 +182,9 @@
            your cartographic needs, and we will find a way to present your data clearly and attractively.
         </p>
       </div>
+      <div class="padding-large">
+        <img src="images/cartography_400_237.jpg" alt="Cartography" width="400" height="237" class="responsive project-image">
+      </div>
     </div>
   </div>
 
@@ -242,7 +245,7 @@
         We get out of the office!</p>
       </div>
       <div class="padding-large">
-        <img src="images/surveyplan_400_252.jpg" alt="Geometric Correction" width="400" height="252" class="responsive project-image">
+        <img src="images/surveyplan_400_252.jpg" alt="Survey Plan" width="400" height="252" class="responsive project-image">
       </div>
     </div>
   </div>
