images and padding on projects

--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
       <div class='thirdWidth'>Database Modeling</div>
     </div>
 
-    <div class='flex'>
+    <div class='flex padding-bottom'>
       <a href='#spatial' class='thirdWidth '>
         <img src='images/icons_spatial125.png' alt='vector map icon' width='125' height='103'> <!-- source: open source from canva.com (creator: gstudioimagen) -->
       </a>
@@ -81,7 +81,7 @@
       <div class='thirdWidth'>Web Design</div>
     </div>
 
-    <div class='flex'>
+    <div class='flex padding-bottom'>
       <a href='#remote' class = 'thirdWidth'>
         <img src='images/icons_remote125.png' alt='satellite icon' width='125' height='119'> <!-- source: open source from canva.com (creator: oleksiiafanasiev) -->
       </a>
@@ -229,7 +229,7 @@
   <!-- SURV 21-->
   <div class="light-grey container bottom-anchor" id='survey'>
     <div class="content">
-      <div>
+      <div class="padding-bottom">
         <h1 class='anchor'>Surveying</h1>
         <p>
           Our veteran surveying crew has years of experience under their belts and will brave the elements to carry out
