commented out unused classes in the css file. fixed some indenting in the html files

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
   <!-- dropdown menu toggled by burger on small screens -->
     <div class='left'>
       <div id="SmallNavBar" class="bar-block light-grey hide hide-large hide-medium large">
-        <a href="people.html" class="show button padding-large">People</a>
-        <a href="projects.html" class="show button padding-large">Projects</a>
+        <a href="people.html" class="show burger-item button padding-large">People</a>
+        <a href="projects.html" class="show button burger-item padding-large">Projects</a>
       </div>
     </div>
     <!-- end of Kazuto edit-->
   </div>
-<!--End of Owner: Kate -->
+  <!--End of Owner: Kate -->
 
   <!-- Title image and accompanying text -->
   <header class="container center padding-62-16">
