"button" class was missing from the nav bar of the people.html page for some reason

--- a/people.html
+++ b/people.html
@@ -22,8 +22,8 @@
       <!-- when the "burger" button is clicked a dropdown menu will appear. this button is only visible when the screen is smaller than a certain size -->
       <a class="burger button hide-medium hide-large right padding-large hover-blue large white" href="javascript:void(0);" onclick="dropMenu()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
       <a href="index.html" class="bar-item button padding-large hover-white">Home</a>
-      <a href="people.html" class="bar-item hide-small padding-large hover-white">People</a>
-      <a href="projects.html" class="bar-item hide-small padding-large hover-white">Projects</a>
+      <a href="people.html" class="bar-item button hide-small padding-large hover-white">People</a>
+      <a href="projects.html" class="bar-item button hide-small padding-large hover-white">Projects</a>
 
     </div>
   <!-- modified by Kazuto-->
