--- a/projects.html
+++ b/projects.html
@@ -202,6 +202,9 @@
              <li>Human Resources</li>
            </ul>
         <p>Contact us for a free quote.</p>
+        <div class="padding-large">
+          <img src="images/databasedesign_400_207.jpg" alt="Geodatabase Design" width="400" height="207" class="responsive project-image">
+        </div>
       </div>
     </div>
   </div>
@@ -242,7 +245,7 @@
         </ul>
         <p>Our team is adept in working in AutoCAD to map your survey data clearly and accurately. If need be, our 
           team is happy to truck the total stations and rods out to the field conduct to cadastral surveys as well.
-        We get out of the office!</p>
+        We love to get out of the office!</p>
         <div class="padding-large">
           <img src="images/surveyplan_400_252.jpg" alt="Survey Plan" width="400" height="252" class="responsive project-image">
         </div>
