added text to geovis

--- a/projects.html
+++ b/projects.html
@@ -180,7 +180,15 @@
           presentations, or displays. We can adapt our maps to suit digital or physical presentation media and
            are able to generalize your data to suit small format for printouts or pamphlets. Talk to us about 
            your cartographic needs, and we will find a way to present your data clearly and attractively.
-        </p>
+          We can produce:</p>
+        <ul>
+          <li>Large Format Maps</li>
+          <li>Small Format Maps</li>
+          <li>General Reference Maps</li>
+          <li>Thematic Maps</li>
+          <li>Special Purpose Maps</li>
+        </ul>
+        <p>Contact our cartography division for more information on how we can help.</p>
         <div class="padding-large">
           <img src="images/cartography_400_237.jpg" alt="Cartography" width="400" height="237" class="responsive project-image">
         </div>
