updates to projects text

--- a/projects.html
+++ b/projects.html
@@ -209,7 +209,7 @@
              <li>Data Analytics</li>
              <li>Human Resources</li>
            </ul>
-        <p>Contact us for a free quote.</p>
+        <p>Contact us today for a free quote.</p>
         <div class="padding-large">
           <img src="images/databasedesign_400_207.jpg" alt="Geodatabase Design" width="400" height="207" class="responsive project-image">
         </div>
@@ -222,7 +222,8 @@
     <div class="content">
       <div class="padding-bottom">
         <h1 class='anchor'>Remote Sensing</h1>
-        <p>We have experience working with all manner of aerial and satellite imagery. Our expertise includes working with:</p>
+        <p>Remote sensing is a powerful tool for all aspects of GIS.We have experience working with all manner of aerial 
+          and satellite imagery. Our expertise includes working with:</p>
           <ul>
             <li>Spectral Index Interpretation</li>
             <li>Geocorrection and Orthorectification</li>
@@ -230,6 +231,8 @@
             <li>Multispectral Image Classification (Supervised and Unsupervised)</li>
             <li>Image Enhancement</li>
           </ul>
+        <p>Let our team of experts handle the tedious tasks of Ground Control Point selection and Training Site Classification for you
+          so you can focus on what is most important to your business. Contact us today for a free quote.</p>
         <div class="padding-large">
           <img src="images/RemoteSensing.jpg" alt="Geometric Correction" width="400" height="321" class="responsive project-image">
         </div>
@@ -251,7 +254,7 @@
           <li>Conduct cadastral surveys</li>
           <li>Creation of survey plans on AutoCAD from survey measurements</li>
         </ul>
-        <p>Our team is adept in working in AutoCAD to map your survey data clearly and accurately. If need be, our 
+        <p>Our team is skilled in working in AutoCAD to map your survey data clearly and accurately. If need be, our 
           team is happy to truck the total stations and rods out to the field conduct to cadastral surveys as well.
         We love to get out of the office!</p>
         <div class="padding-large">
@@ -269,14 +272,15 @@
         <h1 class='anchor'>Web Design</h1>
         <p>
           We design modern, intuitive websites that will be sure to make a great first impression on potential clients.
-          Choose from a list of website templates and we will do the rest - our designers can create a tailor-made website
-          that fits your specifications. Don't let an old, outdated website drag your company image down - contact the Cloud 9 Web Design
-          team today.
+          Choose from a list of website templates and we will do the rest. Our designers can create a tailor-made website
+          that fits your specifications and company's needs. If you decide to design your website with us, we will also offer
+          a special price to host your website on our platform. So don't let an old, outdated website drag your company image down.
+          Contact the Cloud 9 Web Design team today to get started building your dream website.
         </p>
           <ul>
-            <li>Website design even more impressive than this one</li>
+            <li>Modern, attractive website design that is even more impressive than this one</li>
             <li>Responsive websites for desktop and mobile environments</li>
-            <li>We even dabble in JavaScript. Impressive eh?</li>
+            <li>We even dabble in JavaScript (impressive eh?)</li>
           </ul>
       </div>
     </div>
