changes to project files

--- a/projects.html
+++ b/projects.html
@@ -163,8 +163,11 @@
           <li>Environmental Risk Analyses</li>            
         </ul>
         <p>Our team can sort through your topographic maps, aerial imagery, and tabular data to produce meaningful spatial
-          analyses based on your specifications. Please contact us for more information on how we can help.
-        </p>
+          analyses based on your specifications. Please contact us for more information on how we can help.</p>
+        <div class="padding-large">
+          <img src="images/spatial_400_234.jpg" alt="Spatial Analysis" width="400" height="234" class="responsive project-image">
+        </div>
+        <p>Spatial Analysis using Raster Data</p>
       </div>
     </div>
   </div>
@@ -192,6 +195,7 @@
         <div class="padding-large">
           <img src="images/cartography_400_237.jpg" alt="Cartography" width="400" height="237" class="responsive project-image">
         </div>
+        <p>Generalization for Small Format Maps</p>
       </div>
     </div>
   </div>
@@ -213,6 +217,7 @@
         <div class="padding-large">
           <img src="images/databasedesign_400_207.jpg" alt="Geodatabase Design" width="400" height="207" class="responsive project-image">
         </div>
+        <p>Geodatabase Design</p>
       </div>
     </div>
   </div>
@@ -232,10 +237,11 @@
             <li>Image Enhancement</li>
           </ul>
         <p>Let our team of experts handle the tedious tasks of Ground Control Point selection and Training Site Classification for you
-          so you can focus on what is most important to your business. Contact us today for a free quote.</p>
+          so that you can focus on what is most important to your business. Contact us today for a free quote.</p>
         <div class="padding-large">
           <img src="images/RemoteSensing.jpg" alt="Geometric Correction" width="400" height="321" class="responsive project-image">
         </div>
+        <p>Geometric Correction using 2nd Order Polynomials</p>
       </div>
     </div>
   </div>
@@ -260,6 +266,7 @@
         <div class="padding-large">
           <img src="images/surveyplan_400_252.jpg" alt="Survey Plan" width="400" height="252" class="responsive project-image">
         </div>
+        <p>Site Survey Plan Created in AutoCad Map</p>
       </div>
     </div>
   </div>
