--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,7 @@
 <!-- Page created by Kazuto Nov 21-->
 <!-- edits made by Mark Nov 24, cleaning up unused classes-->
 
+<!-- Owner: Kazuto -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,13 +9,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
-  <!-- Owner: Kate -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-  <!-- End of Owner: Kate-->  
   <script src='main.js'></script>
 </head>
 
 <body>
+<!-- End of Owner: Kazuto -->
   <!-- Owner: Kate -->
   <!-- Navbar -->
   <div class="top">
@@ -39,19 +39,18 @@
   </div>
   <!--End of Owner: Kate -->
 
+  <!-- Owner: Kazuto -->
   <!-- Title image and accompanying text -->
   <header class="container center padding-62-16">
     <img class="image" src="images/Cloud9Consulting4.jpg" alt="Cloud 9 Consulting" width="1500" height="523">
     <div class="display-middle">
-      <!-- Owner: Kate -->
       <h1 class="headertext margin">What We Do</h1>
       <p class="hide-medium hide-small center-align xlarge">Our Services</p>
     </div>
   </header>
-
+  <!-- End of Owner: Kazuto -->
 
   <!-- owner: Kazuto -->
-  <!-- Kate - December 1, 2020 -->
   <!--modified by Mark Dec 4, 2020-->
   <!-- inspiration from http://tresreistech.com/gis-consulting-and-services/ -->
   <!-- following code displays 6 icons that are anchor links to the corresponding project description. Displayed 3 across x 2 down for large screens -->
@@ -174,7 +173,6 @@
   <!-- end of Owner: Kate -->
 
   <!--Owner Mark-->
-  <!-- GEOM 102-->
   <div class="container" id='geovis'>
     <div class="content">
       <div class="padding-bottom">
@@ -184,6 +182,8 @@
            are able to generalize your data to suit small format for printouts or pamphlets. Talk to us about 
            your cartographic needs, and we will find a way to present your data clearly and attractively.
           We can produce:</p>
+        <!-- End of Owner: Mark -->
+        <!-- Owner: Kate-->
         <ul>
           <li>Large Format Maps</li>
           <li>Small Format Maps</li>
@@ -199,15 +199,19 @@
       </div>
     </div>
   </div>
+  <!-- End of Owner: Kate-->
 
-  <!-- GEOM 65-->
+  <!-- Owner: Mark -->
   <div class="light-grey container" id='database'>
     <div class="content">
       <div class="padding-bottom">
         <h1 class='anchor'>Database Modeling</h1>
         <p>Our team is skilled in database design, creating functional and efficient databases geared
            towards your specific needs. Consult with us about your data storage requirements, and we will 
-           design a model that will both suit your current needs and plan for your future needs as well. Our database services can be apploed to:</p>
+           design a model that will both suit your current needs and plan for your future needs as well. Our database services can 
+           be applied to:</p>
+           <!-- End of Owner: Mark -->
+           <!-- Owner: Kate -->
            <ul>
              <li>Spatial Datasets</li>
              <li>Data Analytics</li>
@@ -221,21 +225,24 @@
       </div>
     </div>
   </div>
+  <!-- End of Owner: Kate -->
 
-  <!-- GEOM 66-->
+  <!-- Owner: Kazuto -->
   <div class="container" id='remote'>
     <div class="content">
       <div class="padding-bottom">
         <h1 class='anchor'>Remote Sensing</h1>
-        <p>Remote sensing is a powerful tool for all aspects of GIS.We have experience working with all manner of aerial 
+        <p>Remote sensing is a powerful tool for all aspects of GIS. We have experience working with all manner of aerial 
           and satellite imagery. Our expertise includes working with:</p>
           <ul>
             <li>Spectral Index Interpretation</li>
-            <li>Geocorrection and Orthorectification</li>
+            <li>Geometric Correction and Orthorectification</li>
             <li>Photogrammetry</li>
             <li>Multispectral Image Classification (Supervised and Unsupervised)</li>
             <li>Image Enhancement</li>
           </ul>
+          <!-- End of Owner: Kazuto -->
+        <!-- Owner: Kate -->
         <p>Let our team of experts handle the tedious tasks of Ground Control Point selection and Training Site Classification for you
           so that you can focus on what is most important to your business. Contact us today for a free quote.</p>
         <div class="padding-large">
@@ -245,8 +252,9 @@
       </div>
     </div>
   </div>
+  <!-- End of Owner: Kate -->
 
-  <!-- SURV 21-->
+  <!-- Owner: Kazuto -->
   <div class="light-grey container" id='survey'>
     <div class="content">
       <div class="padding-bottom">
@@ -261,8 +269,10 @@
           <li>Creation of survey plans on AutoCAD from survey measurements</li>
         </ul>
         <p>Our team is skilled in working in AutoCAD to map your survey data clearly and accurately. If need be, our 
-          team is happy to truck the total stations and rods out to the field conduct to cadastral surveys as well.
+          team is happy to truck the total stations and rods out to the field to conduct cadastral surveys as well.
         We love to get out of the office!</p>
+        <!-- End of Owner: Kazuto -->
+        <!-- Owner: Kate -->
         <div class="padding-large">
           <img src="images/surveyplan_400_252.jpg" alt="Survey Plan" width="400" height="252" class="responsive project-image">
           <p>Site Survey Plan Created in AutoCad Map</p>
@@ -270,9 +280,9 @@
       </div>
     </div>
   </div>
-  <!-- End Owner Mark-->
+  <!-- End of Owner: Kate -->
 
-  <!-- GEOM 101-->
+  <!-- Owner: Kazuto -->
   <div class="container" id='webdesign'>
     <div class="content">
       <div class="padding-bottom">
@@ -306,3 +316,4 @@
 
 </body>
 </html>
+<!-- End of Owner Kazuto -->
