spelling changes on people

--- a/people.html
+++ b/people.html
@@ -96,7 +96,7 @@
         <h4>Kazuto</h4>
         <p class="biotext">Kazuto received a BSc in geology from Queen's University and has 3 years of experience in the mineral exploration industry. 
           Recently he has discovered a passion for programming and GIS, mainly because you can avoid being eaten alive by blackflies if you are indoors.
-          Likes: rock climbing, camping, piano, gaming, beer, tea. Dislikes: raisin cookies, people pronouncing "gif" with a j sound, stepping in a small 
+          Likes: rock climbing, camping, piano, gaming, beer, and tea. Dislikes: raisin cookies, people pronouncing "gif" with a j sound, and stepping in a small 
           puddle of water on your kitchen floor and getting one sock wet. Awful experience. Wouldn't wish it on anyone.
         </p>
         <!-- owner: Kazuto-->
