not sure what this change is

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Html for template by Kate - Template Source: w3schools https://www.w3schools.com/w3css/tryw3css_templates_start_page.htm --> 
+<!-- Html for template by Kate - Template modified from: https://www.w3schools.com/w3css/tryw3css_templates_start_page.htm --> 
 <!-- edits made by Kazuto Nov 21, 22, 23 -->
 <!-- edits made by Mark Nov 24, cleaning up unused classes -->
 
@@ -72,7 +72,7 @@
   <!-- End of Owner: Kate -->
 
   <!-- Owner: Kate -->
-  <!-- inspired by: https://www.cerg.ca/ -->
+  <!-- rollover project/service photo section inspired by: https://www.cerg.ca/ -->
   <div class="container light-grey center">
     <div class="content text-centered">
       <div>
