--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
   <script src='main.js'></script>
 </head>
-
+<!-- End of Owner: Kate -->
 <body>
 <!-- Owner: Kate -->
   <!-- Navbar -->
@@ -38,19 +38,20 @@
     </div>
     <!-- end of Kazuto edit-->
   </div>
-  <!--End of Owner: Kate -->
+  <!-- End of Owner: Kate -->
 
+  <!-- Owner: Kate -->
   <!-- Title image and accompanying text -->
   <header class="container center padding-62-16">
     <img class="image" src="images/Cloud9Consulting4.jpg" alt="Cloud 9 Consulting" width="1500" height="523">
+    <!-- End of Owner: Kate -->
+    <!-- Owner: Kazuto -->
     <div class="display-middle">
-      <!-- Owner: Kate -->
-      <!-- modified by Kazuto-->
       <h1 class="headertext margin">Cloud 9 Consulting</h1>
       <p class="hide-medium hide-small center-align xlarge">GIS Solutions</p>
-      <!-- end of Kazuto modification-->
     </div>
   </header>
+  <!-- End of Owner: Kazuto -->
 
   <!-- Owner: Kate -->
   <!-- Content Grid -->
@@ -58,7 +59,6 @@
     <div class="content text-centered">
       <div>
         <h2>Welcome</h2>
-
         <p>Cloud 9 Consulting is a GIS consulting company based in Ontario. We provide consulting services to 
           private industry and the public service sector. Formed in 2020, Cloud 9 Consulting was born out of a desire to pass GEOM 
           101 Web Design and Programming. Our three founders have extensive backgrounds in the fields of geology and biology, 
