--- a/people.html
+++ b/people.html
@@ -1,6 +1,6 @@
 <!-- Page created by Kazuto Nov 21-->
 <!-- edits made by Mark Nov 24, cleaning up unused classes-->
-
+<!-- Owner: Kazuto -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,12 +8,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
-  <!-- Owner: Kate -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-  <!-- End of Owner: Kate-->
   <script src='main.js'></script>  
 </head>
-
+<!-- End of Owner: Kazuto -->
 <body>
 <!-- Owner: Kate -->
   <!-- Navbar -->
@@ -38,40 +36,44 @@
   </div>
 <!--End of Owner: Kate -->
 
+  <!-- Owner: Kate -->
   <!-- Title image and accompanying text -->
   <header class="container center padding-62-16">
-    <img class="image" src="images/Cloud9Consulting4.jpg" alt="Cloud 9 Consulting" width="1500" height="523">
+    <img class="image" src="images/Cloud9Consulting4.jpg" alt="Cloud 9 Consulting" width="1500" height="523"> <!-- Image owner: Kazuto -->
+    <!-- End of Owner: Kate -->
+    <!-- Owner: Kazuto -->
     <div class="display-middle">
-      <!-- Owner: Kate -->
       <h1 class="headertext margin">Who We Are</h1>
       <p class="hide-medium hide-small center-align xlarge">Our Team</p>
     </div>
   </header>
+  <!-- End of Owner: Kazuto -->
 
-  <!--Mark edit Dec 1 2020-->
+  <!-- Owner: Mark -->
   <div class='content content-mobile center'>
     <div class='flex-people'>
       <!-- block that contains Kate's photo and bio-->
       <div class= "bioblock">
         <!-- edited by Kate -->
         <img class="image bioimage" src="images/KateHeadshot.jpg"  alt="Kate" width="200" height="300">
-
         <h4>Kate</h4>
         <p class="biotext">Kate has an MSc from Carleton University and thinks that geology is the schist. Her favourite mineral is Halite because she too is a bit
           salty. Kate spent 11 days in the desert, collecting 50 rocks for a 300 page thesis which would take her 2.5 years and one
           dangerous lab accident to complete. She is now pursuing a career in GIS to distance herself from deadly chemicals and to instead
           spend all of her time sitting behind a computer. Just like Carbon, Kate shines under pressure. 
           When Kate grows up she hopes to become a GIS Applications Specialist.</p>
+        <!-- End of Kate edits -->
+        <!-- End of Owner: Mark -->
         <!-- owner: Kazuto-->
         <!-- if the "Contact Information" button is clicked, the email address of the person is displayed below it. Same code used in next two bio blocks -->
         <div class='dropBox'>
           <button id='kateButton' onclick='dropdownKate()' class='dropContact'>Contact Information</button>
           <div id='kateEmail' class='emailBox'>kalittl@flemingcollege.ca</div>
         </div>
-        <!-- end Kazuto ownership-->
       </div>
-      <!-- End of Kate edits -->
-
+      <!-- end Kazuto ownership-->
+      
+      <!-- Owner: Mark -->
       <!-- block that contains Mark's photo and bio-->
       <div class= "bioblock">
         <img class="image bioimage" src="images/MarkHeadshot.jpg"  alt="Mark" width="200" height="300">
@@ -81,14 +83,16 @@
           followed them, guiding tourists in the Neotropics. While the life of the nomad is great, living out of a backpack and not 
           showering only lasts so long, so now he's turned to GIS to analyze the type of data he loves to collect.
         </p>
+        <!-- End Owner: Mark -->
         <!-- owner: Kazuto-->
         <div class='dropBox'>
           <button id='markButton' onclick='dropdownMark()' class='dropContact'>Contact Information</button>
           <div id='markEmail' class='emailBox'>mdorries@flemingcollege.ca</div> 
         </div>
-        <!-- end Kazuto ownership-->
       </div>
+      <!-- end Kazuto ownership-->
 
+      <!-- Owner: Mark -->
       <!-- block that contains Kazuto's photo and bio-->
       <div class= "bioblock">
         <!-- edited by Kazuto-->
@@ -99,16 +103,19 @@
           Likes: rock climbing, camping, piano, gaming, beer, and tea. Dislikes: raisin cookies, people pronouncing "gif" with a j sound, and stepping in a small 
           puddle of water on your kitchen floor and getting one sock wet. Awful experience. Wouldn't wish it on anyone.
         </p>
+        <!-- End Kazuto Edits -->
+        <!-- End Owner: Mark -->
         <!-- owner: Kazuto-->
         <div class='dropBox'>
           <button id='kazutoButton' onclick='dropdownKazuto()' class='dropContact'>Contact Information</button>
           <div id='kazutoEmail' class='emailBox'>kgilling@flemingcollege.ca</div>
         </div>
       </div>
-      <!-- end of Kazuto ownership-->
     </div>
   </div> 
+  <!-- end of Kazuto ownership-->
 
+  <!-- Owner: Kate -->
   <!-- text at bottom stating company name -->
   <div class="container light-grey">
     <p class="margin center">Cloud 9 Consulting</p>
@@ -122,3 +129,4 @@
 
 </body>
 </html>
+<!-- End of Owner: Kate -->
