add inspo sources

--- a/people.html
+++ b/people.html
@@ -14,7 +14,7 @@
 <!-- End of Owner: Kazuto -->
 <!-- Owner: Kate -->
 <body>
-  <!-- Navbar -->
+  <!-- Navbar --> <!-- navbar fixed to top of view when scrolling inspired by: https://www.limgeomatics.com/consulting/-->
   <div class="top">
     <div class="bar card left-align large white">
       <!-- when the "burger" button is clicked a dropdown menu will appear. this button is only visible when the screen is smaller than a certain size -->
@@ -49,7 +49,7 @@
   </header>
   <!-- End of Owner: Kazuto -->
 
-  <!-- Owner: Mark -->
+  <!-- Owner: Mark --> <!-- bio and photo placement inspired by: https://bluefrogconsulting.ca/our-team/ -->
   <div class='content content-mobile center'>
     <div class='flex-people'>
       <!-- block that contains Kate's photo and bio-->
