--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
 <!-- End of Owner: Kazuto -->
 <!-- Owner: Kate -->
 <body>
-  <!-- Navbar -->
+  <!-- Navbar --> <!-- navbar fixed to top of view when scrolling inspired by: https://www.limgeomatics.com/consulting/-->
   <div class="top">
     <div class="bar card left-align large white">
       <!-- when the "burger" button is clicked a dropdown menu will appear. this button is only visible when the screen is smaller than a certain size -->
