--- a/people.html
+++ b/people.html
@@ -123,8 +123,8 @@
 
   <!-- Footer -->
   <footer class="container center">
-    <div class="anchor"></div>
-    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+    <div class="anchor center"></div>
+    <p class="center">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
   </footer>
 
 </body>
