--- a/projects.html
+++ b/projects.html
@@ -310,7 +310,7 @@
   <!-- Footer -->
   <footer class="container center">  
     <div class="anchor"></div>
-    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+    <p class="center">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
   </footer>
 
 </body>
