got rid of some identical classes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Owner: Kazuto -->
     <div class="display-middle">
       <h1 class="headertext margin">Cloud 9 Consulting</h1>
-      <p class="hide-medium hide-small center-align xlarge">GIS Solutions</p>
+      <p class="hide-medium hide-small center xlarge">GIS Solutions</p>
     </div>
   </header>
   <!-- End of Owner: Kazuto -->
@@ -55,7 +55,7 @@
   <!-- Owner: Kate -->
   <!-- Content Grid -->
   <div class="container">
-    <div class="content text-centered">
+    <div class="content-large center">
       <div>
         <h2>Welcome</h2>
         <p>Cloud 9 Consulting is a GIS consulting company based in Ontario. We provide consulting services to 
@@ -73,7 +73,7 @@
   <!-- Owner: Kate -->
   <!-- rollover project/service photo section inspired by: https://www.cerg.ca/ -->
   <div class="container light-grey center">
-    <div class="content text-centered">
+    <div class="content-large center">
       <div>
         <h2>How can we help?</h2>
         <p class="center">Our team of experts are here to help with all of your GIS needs.</p>
