--- a/people.html
+++ b/people.html
@@ -44,13 +44,13 @@
     <!-- Owner: Kazuto -->
     <div class="display-middle">
       <h1 class="headertext margin">Who We Are</h1>
-      <p class="hide-medium hide-small center-align xlarge">Our Team</p>
+      <p class="hide-medium hide-small center xlarge">Our Team</p>
     </div>
   </header>
   <!-- End of Owner: Kazuto -->
 
   <!-- Owner: Mark --> <!-- bio and photo placement inspired by: https://bluefrogconsulting.ca/our-team/ -->
-  <div class='content content-mobile center'>
+  <div class='content-large content-mobile center'>
     <div class='flex-people'>
       <!-- block that contains Kate's photo and bio-->
       <div class= "bioblock">
