--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
     <img class="image" src="images/Cloud9Consulting4.jpg" alt="Cloud 9 Consulting" width="1500" height="523">
     <div class="display-middle">
       <h1 class="headertext margin">What We Do</h1>
-      <p class="hide-medium hide-small center-align xlarge">Our Services</p>
+      <p class="hide-medium hide-small center xlarge">Our Services</p>
     </div>
   </header>
   <!-- End of Owner: Kazuto -->
@@ -53,7 +53,7 @@
   <!--modified by Mark Dec 4, 2020-->
   <!-- inspiration from http://tresreistech.com/gis-consulting-and-services/ -->
   <!-- following code displays 6 icons that are anchor links to the corresponding project description. Displayed 3 across x 2 down for large screens -->
-  <div class='content center hide-small'>
+  <div class='content-large center hide-small'>
     <h2>Services</h2>
     <div class='flex'>
       <div class='thirdWidth'>Spatial Analysis</div>
@@ -97,7 +97,7 @@
 <!--Owner Mark December 5-->
 <!-- menu on small screen-->
 <!-- Displayed 2 across x 3 down for small screens -->
-<div class='content center hide-large hide-medium'>
+<div class='content-large center hide-large hide-medium'>
   <div class='flex hide-large hide-medium'>
     <div class='halfWidth'>Spatial Analysis</div>
     <div class='halfWidth'>Geovisualization</div>
@@ -148,7 +148,7 @@
   <!-- Owner: Kate -->
   <!-- GEOM 103-->
   <div class="light-grey container" id='spatial'>
-    <div class="content">
+    <div class="content-large">
       <div class="padding-bottom">
         <h1 class='anchor'>Spatial Analysis</h1>
         <p>Our spatial analysis division can conduct risk assessment and site suitability analyses for all of your environmental and
@@ -173,7 +173,7 @@
 
   <!--Owner Mark-->
   <div class="container" id='geovis'>
-    <div class="content">
+    <div class="content-large">
       <div class="padding-bottom">
         <h1 class='anchor'>Geovisualization</h1>
         <p>Our cartography specialists can prepare a variety of reference or thematic maps for reporting, 
@@ -202,7 +202,7 @@
 
   <!-- Owner: Mark -->
   <div class="light-grey container" id='database'>
-    <div class="content">
+    <div class="content-large">
       <div class="padding-bottom">
         <h1 class='anchor'>Database Modeling</h1>
         <p>Our team is skilled in database design, creating functional and efficient databases geared
@@ -228,7 +228,7 @@
 
   <!-- Owner: Kazuto -->
   <div class="container" id='remote'>
-    <div class="content">
+    <div class="content-large">
       <div class="padding-bottom">
         <h1 class='anchor'>Remote Sensing</h1>
         <p>Remote sensing is a powerful tool for all aspects of GIS. We have experience working with all manner of aerial 
@@ -255,7 +255,7 @@
 
   <!-- Owner: Kazuto -->
   <div class="light-grey container" id='survey'>
-    <div class="content">
+    <div class="content-large">
       <div class="padding-bottom">
         <h1 class='anchor'>Surveying</h1>
         <p>
@@ -283,7 +283,7 @@
 
   <!-- Owner: Kazuto -->
   <div class="container" id='webdesign'>
-    <div class="content">
+    <div class="content-large">
       <div class="padding-bottom">
         <h1 class='anchor'>Web Design</h1>
         <p>
