--- a/projects.html
+++ b/projects.html
@@ -13,6 +13,7 @@
   <script src='main.js'></script>
 </head>
 <!-- End of Owner: Kazuto -->
+
 <!-- Owner: Kate -->
 <body>
   <!-- Navbar --> <!-- navbar fixed to top of view when scrolling inspired by: https://www.limgeomatics.com/consulting/-->
@@ -301,6 +302,7 @@
       </div>
     </div>
   </div>
+  <!-- End Kazuto ownership -->
 
   <!-- text at bottom stating company name -->
   <div class="container light-grey center">
