removed unnecessary ID's

--- a/people.html
+++ b/people.html
@@ -69,7 +69,7 @@
         <!-- owner: Kazuto-->
         <!-- if the "Contact Information" button is clicked, the email address of the person is displayed below it. Same code used in next two bio blocks -->
         <div class='dropBox'>
-          <button id='kateButton' onclick='dropdownKate()' class='dropContact'>Contact Information</button>
+          <button onclick='dropdownKate()' class='dropContact'>Contact Information</button>
           <div id='kateEmail' class='emailBox'>kalittl@flemingcollege.ca</div>
         </div>
       </div>
@@ -88,7 +88,7 @@
         <!-- End Owner: Mark -->
         <!-- owner: Kazuto-->
         <div class='dropBox'>
-          <button id='markButton' onclick='dropdownMark()' class='dropContact'>Contact Information</button>
+          <button onclick='dropdownMark()' class='dropContact'>Contact Information</button>
           <div id='markEmail' class='emailBox'>mdorries@flemingcollege.ca</div> 
         </div>
       </div>
@@ -109,7 +109,7 @@
         <!-- End Owner: Mark -->
         <!-- owner: Kazuto-->
         <div class='dropBox'>
-          <button id='kazutoButton' onclick='dropdownKazuto()' class='dropContact'>Contact Information</button>
+          <button onclick='dropdownKazuto()' class='dropContact'>Contact Information</button>
           <div id='kazutoEmail' class='emailBox'>kgilling@flemingcollege.ca</div>
         </div>
       </div>
